# seismic-rtm

./: .gitattributes  AUTHOR  CMakeLists.txt  CMakeLists.txt.in  LICENSE  Makefile  README  README.md  azure-pipelines.yml  bench.py  check_hw.c  check_hw.h  config.c  config.h  kernel.h  kernel_avx.c  kernel_avx.h  kernel_avx2.c  kernel_avx2.h  kernel_avx2_fma.c  kernel_avx2_fma_unaligned.c  kernel_avx2_unaligned.c  kernel_avx_fma.c  kernel_avx_fma_unaligned.c  kernel_avx_unaligned.c  kernel_fma_avx2_unaligned.c  kernel_fma_avx_unaligned.c  kernel_fma_sse_aligned.c  kernel_fma_sse_aligned_not_grouped.c  kernel_fma_sse_avx_partial_aligned.c  kernel_fma_sse_partial_aligned.c  kernel_fma_sse_std.c  kernel_fma_sse_unaligned.c  kernel_plain.c  kernel_sse.c  kernel_sse.h  kernel_sse_aligned.c  kernel_sse_aligned_not_grouped.c  kernel_sse_avx_fma_partial_aligned.c  kernel_sse_avx_partial_aligned.c  (+22 more)
.circleci/: config.yml
LICENSES/: BSD-2-Clause.txt  BSD-3-Clause.txt
barrier/: b_default.h
cmake/: googletest.CMakeLists.txt.in
kernel/: builtin_ppc.txt  kernel_ARM_NEON.c  kernel_ARM_NEON.h  kernel_avx.c  kernel_avx2.c  kernel_avx2.h  kernel_avx2_fma.c  kernel_avx_fma.c  kernel_plain.c  kernel_sse.c  kernel_sse.h  kernel_sse_avx_fma_partial_aligned.c  kernel_sse_fma.c  kernel_vmx.c  kernel_vmx.h  kernel_vsx.c
src/: check_hw.c  check_hw.h  config.c  config.h  kernel.h  main.c  seismic.h  visualize.c  visualize.h
src/barrier/: b_default.h  barrier.h  barrier_config.h
src/kernel/: kernel_ARM_NEON.c  kernel_ARM_NEON.h  kernel_avx.c  kernel_avx.h  kernel_avx2.c  kernel_avx2.h  kernel_avx2_fma.c  kernel_avx_fma.c  kernel_plain.c  kernel_ppc.h  kernel_sse.c  kernel_sse.h  kernel_sse_avx_fma_partial_aligned.c  kernel_sse_avx_partial_aligned.c  kernel_sse_fma.c  kernel_vmx.c  kernel_vsx.c
test/: CMakeLists.txt
tools/: bench.py  ximage.ppc64le.elf  ximage.ppc64le.elf.license  ximage.x86_64.elf
